docroot/themes/custom/emulsifymars/components/02-molecules/content-feature/_content-feature.scss
.content-feature {
  position: relative;
  text-align: center;
  padding: 5rem 2rem;

  @include desktop {
    height: 544px;
  }

  @include medium {
    padding: 6rem 2rem;
  }

  @include xl {
      padding: 8rem 2rem 5.55vw;
  }

  &__bg-image {
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    overflow: hidden;

    &--dark-overlay {
      &::after {
        content: '';
        position: absolute;
        display: block;
        width: 100%;
        height: 100%;
        top: 0;
        left: 0;
        background-image: linear-gradient(to top, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0.3));
      }
    }

    .parallax-image {
      position: absolute;
      top: 0;
      bottom: 0;
      margin: auto;
      width: 100%;
      object-fit: cover;
    }
  }

  &__content {
    position: relative;
    margin: 0 auto;
    max-width: 1050px;
  }

  & .eyebrow {
    @include set-font($font-type: 'primary-font');

    margin-top: 0;

    @include xs {
      font-size: 1.4rem;
      line-height: 1.4rem;
    }

    @include large {
      font-size: 1.6rem;
      line-height: 1.6rem;
    }
  }

  &__graphic-divider {

    @include large {
      margin-bottom: 3rem !important;
    }

  }

  &__heading {
    @include set-font($font-type: 'heading-font');

    color: clr(subcolor-3);
    margin: 3rem 0 4rem;
    word-break: break-word;

    @include xs {
      font-size: 4rem;
      line-height: 4rem;
    }

    @include medium {
      margin: 4rem 0;
      font-size: 5.6rem;
      line-height: 5.6rem;
    }

    @include large {
      font-size: 6.4rem;
      line-height: 6.4rem;
      margin: 4rem 0 6rem;
    }

    a {
      color: inherit;
      text-decoration: none;
    }
  }

  &__paragraph {
    @include set-font($font-type: 'secondary-font');

    color: clr(subcolor-3);
    font-size: 1.8rem;
    line-height: 2.88rem;
    margin: 0 auto 3rem;

    @include medium {
      max-width: 570px;
    }

    @include large {
        font-size: 2.2rem;
        line-height: 3.52rem;
        margin: 0 auto 3rem;
        max-width: 1050px;
    }
  }

  &::before {
    content: "";
    position: absolute;
    height: 100%;
    width: 100%;
    left: 0;
    top: 0;
    background-image: linear-gradient(to top, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0.3));
    opacity: .4;
  }
}

/*
  https://dev.azure.com/MarsDevTeam/MarsExperiencePlatform/_workitems/edit/209464
  https://dev.azure.com/MarsDevTeam/MarsExperiencePlatform/_workitems/edit/253339
*/

.block[data-block-plugin-id='mars_common_content_feature_module'] +
.block[data-block-plugin-id='mars_common_content_feature_module'],
.block[data-block-plugin-id='freeform_story_block'] +
.block[data-block-plugin-id='mars_common_content_feature_module'] {
  margin-top: 50px;

  @include medium {
    margin-top: 60px;
  }

  @include xl {
    margin-top: 80px;
  }
}

